@@ -1,3 +1,8 @@
+2019-01-29  Mark Wielaard  <mark@klomp.org>
+
+	* eblobjnote.c (ebl_object_note): Check pr_datasz padding doesn't
+	overflow descsz.
+
 2019-01-16  Mark Wielaard  <mark@klomp.org>
 
 	* libebl.h (ebl_core_note): Add desc as argument.
